k8s/prod-manifests/posthub.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-posthub-local
  labels:
    name: ns-posthub-local

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posthub-local
  namespace: ns-posthub-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posthub-local
  template:
    metadata:
      labels:
        app: posthub-local
    spec:
      containers:
      - name: posthub-local
        image: posthub:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 250m
            memory: 350Mi
          limits:
            memory: "900Mi"
            cpu: "700m"
        readinessProbe:
          httpGet:
            path: /api/posthub/healthcheck
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
        ports:
        - containerPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: posthub-service-local
  namespace: ns-posthub-local
spec:
  selector:
    app: posthub-local
  type: ClusterIP
  ports:
  - name: posthub-local
    port: 3000
    targetPort: 3000
    protocol: TCP
