k8s/prod-manifests/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-local
  namespace: ns-posthub-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-local
  template:
    metadata:
      labels:
        app: posts-local
    spec:
      containers:
      - name: posts-local
        image: posthub-posts:latest
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 250m
            memory: 350Mi
          limits:
            memory: "900Mi"
            cpu: "700m"
        readinessProbe:
          httpGet:
            path: /api/posts/healthcheck
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
        ports:
        - containerPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: posts-service-local
  namespace: ns-posthub-local
spec:
  selector:
    app: posts-local
  type: ClusterIP
  ports:
  - name: posts-local
    port: 3000
    targetPort: 3000
    protocol: TCP
