k8s/prod-manifests/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-local
  namespace: ns-posthub-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-local
  template:
    metadata:
      labels:
        app: ui-local
    spec:
      containers:
      - name: ui-local
        image: posthub-ui:latest
        imagePullPolicy: Never
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "900Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: ui-service-local
  namespace: ns-posthub-local
spec:
  selector:
    app: ui-local
  type: ClusterIP
  ports:
  - name: ui-local
    port: 3000
    targetPort: 3000
