k8s/prod-manifests/ingress-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-posthub-local
  labels:
    name: ns-posthub-local

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posthub-ingress-local
  namespace: ns-posthub-local
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/posthub
        pathType: Prefix
        backend:
          service:
            name: posthub-service-local
            port:
              number: 3000
      - path: /api/posts
        pathType: Prefix
        backend:
          service:
            name: posts-service-local
            port:
              number: 3000
      - path: /api/comments
        pathType: Prefix
        backend:
          service:
            name: comments-service-local
            port:
              number: 3000
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: users-service-local
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-service-local
            port:
              number: 3000
